--- a/src/pages/HomePage/Header/header.module.css
+++ b/src/pages/HomePage/Header/header.module.css
@@ -1,13 +1,19 @@
 .header{
     display: flex;
     flex-direction: row;
-    max-width: 100%;
+    width: 100%;
     justify-content: space-around;
     padding: 5px 10px;
     background-color: #fff;
     align-items: center;
-    position: relative;
-}.header>.right>.outIcon{
+    position: fixed;
+    z-index: 10;
+
+}
+.header>h4{
+    font-size: 30px;
+}
+.header>.right>.outIcon{
     font-size: 40px;
     cursor: pointer;
 }
