--- a/src/components/FormPosts/postform.module.css
+++ b/src/components/FormPosts/postform.module.css
@@ -4,9 +4,10 @@
     gap: 30px;
     border: 1px solid #fff;
     width: 68%;
-    padding: 20px;
+    padding: 80px 20px;
     background-color: rgb(254, 255, 255);
     border-radius: 20px;
+
 
    
 }
