--- a/src/pages/HomePage/Header/header.module.css
+++ b/src/pages/HomePage/Header/header.module.css
@@ -56,24 +56,26 @@
     }
 }
 .header>.setting{
-    display: none;
+    display: inline-flex;
     align-items: flex-start;
     justify-content: space-around;
-    background-color: rgb(253, 255, 255);
+    background-color:rgb(0, 30, 60);
     position: absolute;
     top: 0px;
     left: 0px;
     min-width: 100%;
     min-height: 100vh;
     padding: 20px 20px 0px 0px;
-    
+    z-index: 1000;
 
 }
 .setting>.clear{
     cursor: pointer;
+    color: #fff;
+    font-weight: 700;
 }
 .header>.setting>.settingHeader{
-    background-color: aqua;
+    background-color: rgb(32, 166, 239);
     display: flex;
     flex-direction: row;
     gap: 10px;
@@ -106,4 +108,5 @@
     max-width: 98%;
 }.emailOut>.exit{
     cursor: pointer;
+    
 }
