--- a/src/pages/HomePage/Header/header.module.css
+++ b/src/pages/HomePage/Header/header.module.css
@@ -57,24 +57,32 @@
 }
 .header>.setting{
     display: inline-flex;
-    align-items: flex-start;
-    justify-content: space-around;
+    
+    gap: 30px;
     background-color:rgb(0, 30, 60);
+    flex-direction: column;
     position: absolute;
     top: 0px;
     left: 0px;
     min-width: 100%;
     min-height: 100vh;
-    padding: 20px 20px 0px 0px;
+    padding: 20px 0px 0px 0px;
     z-index: 1000;
 
 }
-.setting>.clear{
+.top_setting{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    max-width: 100%;
+    align-items: center;
+}
+.setting>.top_setting>.clear{
     cursor: pointer;
     color: #fff;
     font-weight: 700;
 }
-.header>.setting>.settingHeader{
+.header>.setting>.top_setting>.settingHeader{
     background-color: rgb(32, 166, 239);
     display: flex;
     flex-direction: row;
@@ -82,14 +90,14 @@
     height:10%;
     padding: 5px;
     border-radius: 15px;
-}.settingHeader>.userIcon{
+}.settingHeader>.top_setting>.userIcon{
     border-radius: 10px;
     padding: 2px;
     font-size: 30px;
     background-color: rgb(252, 251, 253);
 }
 
-.settingHeader>.emailOut{
+.settingHeader>.top_setting>.emailOut{
     display: flex;
     flex-direction: column;
     max-height:min-content;
