--- a/src/components/FormPosts/postform.module.css
+++ b/src/components/FormPosts/postform.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     gap: 30px;
     border: 1px solid #fff;
-    width: 68%;
+    width: 58%;
     padding: 80px 20px;
     background-color: rgb(254, 255, 255);
     border-radius: 20px;
@@ -11,9 +11,10 @@
 
    
 }
-@media (max-width:400px) {
+@media (max-width:768px) {
     .postform{
-        width: 90%;
+        width: 98%;
+        padding: 20px;
     }
 }
 .postform>input{
