--- a/src/pages/HomePage/SectionPost/PostList/postlist.module.css
+++ b/src/pages/HomePage/SectionPost/PostList/postlist.module.css
@@ -6,7 +6,11 @@
   padding: 5px;
   border-radius: 10px;
   color: #fff;
-
+   transition: .7s;
+   cursor: pointer;
+}.posts:hover{
+  transform: scale(1.22);
+  
 }
 
 
