--- a/src/components/FormPosts/postform.module.css
+++ b/src/components/FormPosts/postform.module.css
@@ -1,30 +1,29 @@
-.postform{
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    border: 1px solid #fff;
-    width: 58%;
-    padding: 80px 20px;
-    background-color: rgb(254, 255, 255);
-    border-radius: 20px;
-
-
-   
+.postform {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  border: 1px solid #fff;
+  width: 58%;
+  padding: 80px 20px;
+  background-color: rgb(254, 255, 255);
+  border-radius: 20px;
 }
-@media (max-width:768px) {
-    .postform{
-        width: 98%;
-        padding: 20px;
-    }
+@media (max-width: 768px) {
+  .postform {
+    width: 98%;
+    padding: 20px;
+  }
 }
-.postform>input{
-    color: #fff;
-    border: 1px solid #fff;
-}.postform>.bottom>.upload{
-    max-width: 40px;
-}.bottom{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+.postform > input {
+  color: #fff;
+  border: 1px solid #fff;
+}
+.postform > .bottom > .upload {
+  max-width: 40px;
+}
+.bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
