--- a/src/pages/LoginPage/login.module.css
+++ b/src/pages/LoginPage/login.module.css
@@ -3,6 +3,7 @@
     height: 100vh;
     display: flex;
     max-width: 100%;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
