--- a/src/pages/LoginPage/login.module.css
+++ b/src/pages/LoginPage/login.module.css
@@ -1,5 +1,5 @@
 .login{
-    background-color: black;
+    background-color: rgb(0, 30, 60);;
     height: 100vh;
     display: flex;
     max-width: 100%;
