--- a/src/pages/HomePage/SectionPost/PostList/postlist.module.css
+++ b/src/pages/HomePage/SectionPost/PostList/postlist.module.css
@@ -1,27 +1,90 @@
 .posts{
   background-color: rgb(0, 30, 60);
-  max-width: 50%;
-  max-height: 180px;
+  max-width: 100%;
+  max-height:auto;
   overflow: hidden;
   padding: 5px;
   border-radius: 10px;
   color: #fff;
-   transition: .7s;
-   cursor: pointer;
-}.posts:hover{
-  transform: scale(0.92);
-  
+  transition: .7s;
+  cursor: pointer;
+  text-align: center;
+  justify-content: space-between;
+  align-items: flex-start;
+  display: flex;
+  flex-direction: row;
+  padding: 5px;
+  position: relative;
 }
 
-
+.posts>.wrap{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  justify-content: center;
+  align-items: flex-start;
+}
+.posts:hover{
+  transform: scale(0.92);
+  
+}.posts>span{
+  transform:rotateX(180deg);
+  position: relative;
+  right: 10px;
+  font-size: 40px;
+  cursor: pointer;
+}.posts>button{
+  position: absolute;
+  right: 4px;
+  top: 27px;
+  border: none;
+  padding: 3px;
+  outline: none;
+  background: #fff;
+  border-radius: 10px;
+  cursor: pointer;
+}
 
 
 .postList{
     padding-top: 120px;
     background-color: black;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
+    width: 50%;
+    display:grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(6,1fr);
+    grid-auto-rows:auto;
     gap: 10px;
+    justify-content: start;
+    grid-template-areas: 
+    'one one  two'
+    'tree tree tree'
+    'five for for'
+    'six six six';                       
+}
+
+@media (max-width:768px) {
+  .postList{
+    display: flex;
+    flex-direction: column;
+  }.postList>.posts{
+    width: 100%;
+  }
+}
+.postList>.posts:nth-child(1){
+  grid-area: one;
+}.posts:nth-child(2){
+  grid-area: two;
+}.posts:nth-child(3){
+  grid-area: tree;
+}.posts:nth-child(4){
+  grid-area: for;
+}.posts:nth-child(5){
+   grid-area: five;
+}.posts:nth-child(6){
+  grid-area: six;
+  
+}.postList>.posts>.wrap>img{
+   max-width: 99%;
+   max-height: 50%;
 }
