--- a/src/pages/HomePage/SectionPost/section.module.css
+++ b/src/pages/HomePage/SectionPost/section.module.css
@@ -1,10 +1,33 @@
 .section{
     position: relative;
-    background-color: rgb(253, 252, 252);
+    background-color: rgb(0, 0, 0);
     min-height: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+
     width: 100%;
 
+}
+.section>.link>.plus{
+    display: none;
+}
+.section>.link>.plus{
+    position: fixed;
+    bottom: 100px;
+}
+
+.section>.link>.plus{
+    font-size: 50px;
+    transition: .7s;
+    color: #fff;
+    
+}.section>.link>.plus:hover{
+     transform: rotate(360deg);
+
+    color: rgb(79, 229, 252);
+}
+@media (max-width:425px) {
+    .section>.link>.plus{
+        display: block;
+    }
 }
