--- a/src/pages/HomePage/SectionPost/PostList/postlist.module.css
+++ b/src/pages/HomePage/SectionPost/PostList/postlist.module.css
@@ -1,7 +1,7 @@
 .posts{
   background-color: rgb(0, 30, 60);
   max-width: 100%;
-  max-height:auto;
+  
   overflow: hidden;
   padding: 5px;
   border-radius: 10px;
@@ -25,7 +25,7 @@
   align-items: flex-start;
 }
 .posts:hover{
-  transform: scale(0.92);
+  transform: scale(0.98);
   
 }.posts>span{
   transform:rotateX(180deg);
@@ -50,17 +50,11 @@
     padding-top: 120px;
     background-color: black;
     width: 50%;
-    display:grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-template-rows: repeat(6,1fr);
-    grid-auto-rows:auto;
+    display:flex;
+   flex-direction: column;
     gap: 10px;
     justify-content: start;
-    grid-template-areas: 
-    'one one  two'
-    'tree tree tree'
-    'five for for'
-    'six six six';                       
+                   
 }
 
 @media (max-width:768px) {
@@ -71,20 +65,7 @@
     width: 100%;
   }
 }
-.postList>.posts:nth-child(1){
-  grid-area: one;
-}.posts:nth-child(2){
-  grid-area: two;
-}.posts:nth-child(3){
-  grid-area: tree;
-}.posts:nth-child(4){
-  grid-area: for;
-}.posts:nth-child(5){
-   grid-area: five;
-}.posts:nth-child(6){
-  grid-area: six;
-  
-}.postList>.posts>.wrap>img{
+.postList>.posts>.wrap>img{
    max-width: 99%;
    max-height: 50%;
 }
