--- a/src/pages/HomePage/SectionPost/PostList/postlist.module.css
+++ b/src/pages/HomePage/SectionPost/PostList/postlist.module.css
@@ -1,5 +1,6 @@
 .posts{
   background-color: rgb(0, 30, 60);
+  width: 100%;
   max-width: 100%;
   overflow: hidden;
   padding: 5px;
@@ -7,21 +8,26 @@
   color: #fff;
   transition: .7s;
   cursor: pointer;
-  text-align: center;
+  text-align: start;
   justify-content: space-between;
   align-items: flex-start;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   padding: 5px;
   position: relative;
+  
 }
 
 .posts>.wrap{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
   gap: 5px;
-  justify-content: center;
+  justify-content: start;
   align-items: flex-start;
+
+font-size: 18px;
 }
 .posts:hover{
   transform: scale(0.98);
@@ -50,7 +56,7 @@
     background-color: black;
     width: 50%;
     display:flex;
-   flex-direction: column;
+    flex-direction: column;
     gap: 10px;
     justify-content: start;
                    
@@ -60,11 +66,8 @@
   .postList{
     display: flex;
     flex-direction: column;
+    width: 80%;
   }.postList>.posts{
     width: 100%;
   }
-}
-.postList>.posts>.wrap>img{
-   max-width: 99%;
-   max-height: 50%;
 }
